adicionando condições, repositórios e ligação com o banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=meu-backend
+spring.application.name=meu-backend;
+    spring.data.source.url = jdbc:mysql://localhost:3306/?user=root/registros;
+spring.data.source.username = "root";
+spring.data.source.password = "teste";
